fix(radio): vertical gap

--- a/packages/components/radio/radio-tokens.scss
+++ b/packages/components/radio/radio-tokens.scss
@@ -1,6 +1,6 @@
 .kbq-radio-group {
     --kbq-radio-size-big-vertical-gap: var(--kbq-size-m);
-    --kbq-radio-size-normal-vertical-gap: var(--kbq-size-m);
+    --kbq-radio-size-normal-vertical-gap: var(--kbq-size-s);
     --kbq-radio-size-big-top: var(--kbq-size-3xs);
     /* THEME TOKENS */
     --kbq-radio-theme-default-outer-circle-border: var(--kbq-line-contrast-fade);
